# Deep_Packet_Inspection_V2

./: .gitignore  README.md  docker-compose.yml  filtered.pcap  generate_attack_pcap.py  generate_test_pcap.py  output.pcap
backend/: .dockerignore  CMakeLists.txt  Dockerfile  build.sh
backend/api/: server.js
backend/data/: sample.pcap
backend/include/: connection_tracker.h  dpi_engine.h  fast_path.h  load_balancer.h  packet_parser.h  pcap_reader.h  platform.h  rule_manager.h  sni_extractor.h  thread_safe_queue.h  types.h
backend/ml/: Dockerfile  model.joblib  requirements.txt  server.py
backend/src/: connection_tracker.cpp  dpi_engine.cpp  dpi_mt.cpp  fast_path.cpp  load_balancer.cpp  main.cpp  main_dpi.cpp  main_simple.cpp  main_working.cpp  packet_parser.cpp  pcap_reader.cpp  rule_manager.cpp  sni_extractor.cpp  types.cpp
dashboard/: Dockerfile
dashboard/src/app/: page.tsx
